# ML_docs_chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/app/: __init__.py  main.py
backend/src/app/api/routes/: chat.py  evaluation.py  ingestion.py
backend/src/app/core/: config.py  dependencies.py
backend/src/app/domain/: README.md  models.py
backend/src/app/infrastructure/: README.md  neo4j_repository.py
backend/src/app/services/: README.md  arxiv_loader.py  chat_service.py  evaluation_service.py  gnn_embeddings.py  ingestion_service.py  llm_service.py  retrieval_service.py  text_processing.py
docs/: README.md
docs/arxiv/: README.md  arxiv_index.json
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
project-docs/: 00-overview.md  01-architecture.md  02-system-context.md  03-component-design.md  04-data-model-neo4j.md  05-ingestion-pipeline.md  06-retrieval-and-generation.md  07-gnn-embeddings.md  08-api-contract.md  09-frontend-ux-and-eval-tabs.md  10-testing-strategy-tdd-bdd.md  11-unit-test-catalog.md  12-e2e-scenarios-bdd.feature  13-evaluation-framework.md  14-security-privacy-compliance.md  15-observability-and-ops.md  16-delivery-roadmap.md  17-open-questions.md  README.md
project-docs/adr/: 0001-architecture-style.md  0002-neo4j-as-knowledge-graph.md  0003-hf-inference-gemma4-31b.md  0004-gnn-topology-aware-embeddings.md
scripts/: README.md
tests/: README.md  conftest.py
(+137 files in other folders)
