[project]
name = "graph-rag-backend"
version = "0.1.0"
description = "Backend skeleton for Graph RAG chatbot with Neo4j and Hugging Face inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "neo4j>=5.28.0,<6.0.0",
  "huggingface_hub>=0.30.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "numpy>=2.1.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
